--- a/flexbox-project.css
+++ b/flexbox-project.css
@@ -1,5 +1,26 @@
 /* Write your CSS here. */
 
+body {
+  font-family: 'Segoe UI', 'Roboto', 'Noto Sans', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  margin: 0;
+}
+
+.header-nav__container {
+  background-color: #026AA7;
+  font-size: 16px;
+  line-height: 20px;
+  padding: 4px;
+  color: white;
+  display: flex;
+  flex-flow: row-wrap;
+  justify-content: space-between;
+}
+
+.header-nav__group {
+  padding: 0;
+  margin: 0;
+}
 
 
 
