--- a/flexbox-project.css
+++ b/flexbox-project.css
@@ -39,14 +39,61 @@ body {
 }
 
 
+.team__container{
+  background-color:#f4f5f7;
+  padding: 32px;
+}
+
+.team__info{
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 650px;
+  text-align: center;
+}
+
+.team__info > h1 {
+  margin: 0 0 12px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 28px;
+}
+
+.team__info a {
+  color: #172b4d;
+  line-height: 20px;
+  font-weight: normal;
+}
 
 
+.tabbed-nav__container{
+  background-color: #f4f5f7;
+}
 
+.tabbed-nav__group{
+  border-bottom: 1px solid #dfe1e6;
+  display: flex;
+  justify-content: center;
+}
 
+.tabbed-nav__link{
+  background-color: white;
+  border: 1px solid #dfe1e6;
+  border-bottom: 2px;
+  border-radius: Bold;
+  line-height: 20px;
+  padding: 10px;
+  margin: 0 5px;
+  color: #172b4d;
+}
 
-
-
-
+@media screen and (max-width: 500px){
+  .tabbed-nav__group{
+    display: block;
+  }
+  .tabbed-nav__link{
+    display: block;
+  }
+}
 
 
 /* Supplied CSS follows. */
