--- a/flexbox-project.css
+++ b/flexbox-project.css
@@ -46,7 +46,7 @@ body {
 
 .team__info{
   flex-direction: column;
-  margin: 0 auto;
+  margin: 0 600px 0 200px;
   max-width: 650px;
   text-align: center;
 }
@@ -94,6 +94,117 @@ body {
     display: block;
   }
 }
+
+.boards__container {
+  margin: 0 auto;
+  padding: 32px;
+  max-width: 1400px;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.boards__sidebar {
+  background-color: #6C547B;
+  border-radius: 3px;
+  margin: 0 32px 32px 0;
+  padding: 0 20px 32px 20px;
+  max-height: 130px;
+  max-width: 180px;
+  width: 20%;
+  flex-basis: 220px;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.boards__sidebar-content
+.title, a {
+  color: white;
+}
+
+.boards__sidebar-content
+.description {
+  color: lightblue;
+}
+
+.boards__group {
+  display: flex;
+  flex-flow: row wrap;
+  width: 80%;
+}
+
+.boards__board {
+  background-color: black;
+  border-radius: 3px;
+  box-sizing: border-box;
+  font-weight: bold;
+  height: 100px;
+  margin: 0 8px 16px;
+  max-width: 250px;
+  padding: 4px 8px;
+  position: relative;
+  color: white;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media screen 
+and (min-width: 750px) 
+and (max-width: 1280px) {
+  .boards__board {
+    width: 33%;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .boards__board {
+    width: 100%;
+  }
+}
+
+.board-1 {
+  background-image: url('board-backgrounds/board-1-background.jpg');
+}
+
+.board-2 {
+  background-image: url('board-backgrounds/board-2-background.jpg');
+}
+
+.board-3 {
+  background-image: url('board-backgrounds/board-3-background.jpg');
+}
+
+.board-4 {
+  background-image: url('board-backgrounds/board-4-background.jpg');
+}
+
+.board-5 {
+  background-image: url('board-backgrounds/board-5-background.jpg');
+}
+
+.board-6 {
+  background-image: url('board-backgrounds/board-6-background.jpg');
+}
+
+.board-7 {
+  background-image: url('board-backgrounds/board-7-background.jpg');
+}
+
+.board-8 {
+  background-image: url('board-backgrounds/board-8-background.jpg');
+}
+
+.board-9 {
+  background-image: url('board-backgrounds/board-9-background.jpg');
+}
+
+.board-10 {
+  background-image: url('board-backgrounds/board-10-background.jpg');
+}
+
+
+
 
 
 /* Supplied CSS follows. */
